第三十二次修改

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <title>Easy社团</title>
 	<link rel="stylesheet" type="text/css" href="./common.css"/>
   </head>
-  <body>
+  <body style="margin: 0 auto;padding: 0;width: 100%;background-color: #f8fbf9;">
     <noscript>
       <strong>We're sorry but default doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
